<resources>
    <string name="app_name">MuchasBolas - Robots</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_mi_mapa_robots">Map</string>


    <!-- Screen Inicial MainActivity screen-->
    <string name="registrate_controlar_robots">Registrate para controlar Robots</string>
    <string name="mostrar_mapa_robots">Mapa Robots </string>


    <!-- Screen Despliega Detalle screen-->
    <string name="escribe_id_producto">:</string>
    <string name="escribe_nombre_producto">nombre</string>
    <string name="escribe_precio_producto">precio</string>
    <string name="vacio">.</string>

    <string name="boton_agregarProductoEnvio">Agregar a Pedido</string>

    <string name="boton_regresar_lista">Regresar</string>


    <string name="titulo_menu">Robots MuchasBolas - Youtochi</string>

    <!-- Screen Inicial MainActivity screen-->
    <string name="regresar_a_lista_robots">Registrate para ver Lista Robots</string>
    <string name="aqui_esta_en_mapa_robots">Muestra robots cerca Usted.Solo Usuarios Registrados </string>

    <string name="bienvenido_lista_robots">Controla Robots via Internet </string>


    <!-- Screen Mapa Un robot-->
    <string name="controla_robot_remotamente">Usuarios Registrados - Controlar al Robot usando  Google Maps</string>
    <string name="conecta_robot_remoto">Usuarios Registrados - Conectarte por medio Internet al Robot.Empieza a Jugar </string>
    <string name="controla_robot_via_persicope">Usuarios Registrados - Controlar al Robot usando Periscope Live</string>





</resources>
