<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.youtochi.youtochiballrobotunit.DespliegaDetalleRobotActivity">




    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detallerobotfab01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_mylocation" />

    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/escribe_id_producto"
        android:id="@+id/productoID"
        android:enabled="false"/>
    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribe_nombre_producto"
        android:textSize="10sp" />
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/escribe_nombre_producto"
        android:id="@+id/productoName"
        android:enabled="false"/>
    <TextView
        android:id="@+id/textMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribe_precio_producto"
        android:textSize="10sp" />
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/escribe_precio_producto"
        android:id="@+id/productoPrecio"
        android:enabled="false"/>

    <ImageView
        android:id="@+id/productoImagen"
        android:layout_height="50dp"
        android:layout_width="match_parent"/>


    <TextView
        android:id="@+id/textResultadoOperacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vacio"
        android:textSize="10sp" />

    <!--        <Button android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/btnSaveTask"
                android:text="@string/boton_guardar"/>
                -->


    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnAddProdShopping"
        android:hint="@string/boton_agregarProductoEnvio"

        android:src="@android:drawable/ic_menu_agenda"
        android:layout_gravity="bottom|end"
        /> <!--  android:background="@mipmap/ic_botonflechaleft"-->


    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/btnRegresarRentar"

        android:src="@android:drawable/ic_media_previous"
        />
    <!--  android:background="@mipmap/ic_botonflechaleft"
    android:text="@string/boton_regresar_lista"-->



</LinearLayout>
